# shai-hulud-rs

./: .gitignore  Cargo.toml  bacon.toml
src/: indikatif.rs  main.rs  probe.rs  report.rs  scanner.rs
src/probe/: check_file_hashes.rs  check_workflow_files.rs
src/report/: console.rs
test-cases/infected-workflow-files/: shai-hulud-workflow.yml
