[package]
name = "shai-hulud-detect"
version = "0.1.0"
edition = "2024"

description = "Rust port of Shai-Hulud NPM Supply Chain Attack Detector"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
console = "0.16"
#indicatif = { path = "../Luolong/indicatif/", features = ["rayon"] }
indicatif = { git = "https://github.com/Luolong/indicatif/", features = ["rayon"] }
#indicatif = { version = "0.18", features = ["rayon"] }
itertools = "0.14"
jwalk = { version = "0.8" }
aho-corasick = "1"
regex = "1"
sha256 = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
eros = "0.5"
